[package]
name = "proddle"
version = "0.1.0"
authors = ["Dan Rammer <hamersaw@bushpath.com>"]
build = "build.rs"

[build-dependencies]
capnpc = "0.7"

[dependencies]
bson = "0.3"
bzip2 = "0.3"
capnp = "0.7"
capnp-rpc = "0.7"
clap = "2.19"
gj = "0.2"
gjio = "0.1"
mongodb = "0.1"
rand = "0.3"
rustc-serialize = "0.3"
time = "0.1"
