[package]
name = "proddle"
version = "0.1.0"
authors = ["Dan Rammer <hamersaw@bushpath.com>"]
build = "build.rs"

[build-dependencies]
capnpc = "0.7"

[dependencies]
bson = "0.3"
bzip2 = "0.3"
capnp = "0.8"
capnp-rpc = "0.8"
chan = "0.1"
clap = {version = "2.19", features = ["yaml"]}
env_logger = "0.3"
futures = "0.1"
gj = "0.2"
gjio = "0.1"
mongodb = "0.1"
log = "0.3"
rand = "0.3"
rustc-serialize = "0.3"
threadpool = "1.3"
time = "0.1"
tokio-core = "0.1"
