[package]
name = "proddle"
version = "0.1.6"
authors = ["Dan Rammer <hamersaw@bushpath.com>"]

[build-dependencies]
capnpc = "0.7"

[dependencies]
bincode = {git="https://github.com/TyOverby/bincode"}
bson = "0.4"
bytes = "0.4"
clap = "2.19"
curl = "0.4"
futures = "0.1"
mongodb = "0.2"
serde = "0.9"
serde_derive = "0.9"
tokio-io = "0.1"
tokio-proto = "0.1"
