[package]
name = "bridge"
version = "0.2.5"
authors = ["Dan Rammer <hamersaw@bushpath.com>"]

[dependencies]
bson = "0.4"
capnp = "0.8"
capnp-rpc = "0.8"
clap = {version = "2.19", features = ["yaml"]}
futures = "0.1"
mongodb = {version = "0.2", features = ["ssl"]}
proddle = {path = "../"}
serde_json = "0.9"
slog = "1.5"
slog-scope = "0.2"
slog-term = "1.5"
tokio-core = "0.1"
tokio-io = "0.1"
