[package]
name = "bridge"
version = "0.3.1"
authors = ["Dan Rammer <hamersaw@bushpath.com>"]

[dependencies]
bson = "0.7"
chan = "0.1"
clap = {version = "2.19", features = ["yaml"]}
mongodb = {version = "0.2", features = ["ssl"]}
proddle = {path = "../"}
slog = "1.5"
slog-scope = "0.2"
slog-term = "1.5"
