[package]
name = "vantage"
version = "0.2.4"
authors = ["Dan Rammer <hamersaw@bushpath.com>"]

[dependencies]
bson = "0.4"
capnp = "0.8"
capnp-rpc = "0.8"
chan = "0.1"
clap = {version = "2.19", features = ["yaml"]}
futures = "0.1"
proddle = {path = "../"}
rand = "0.3"
serde_json = "0.9"
slog = "1.5"
slog-scope = "0.2"
slog-term = "1.5"
time = "0.1"
tokio-core = "0.1"
